--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,22 +3,27 @@ body {
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   background-color: #ffffff;
   border-color: #dddddd;
-  align-content: center;
+  text-align: left;
+  box-align: center;
   width: 960px;
+  margin: 10%;
 }
 
-h1 {
-  font-family: 'Georgia', Times, Times 'Times New Roman', Times, serif, serif;
+h1,
+#name {
+  font-family: 'Georgia', 'Times New Roman', Times, serif;
   color: #4aaaa5;
+  clear: both;
 }
 
 a {
-
+  float: right;
 }
 
-.name {
+#name {
   color: white;
   background-color: #4aaaa5;
+  padding: 10px 10px 15px 10px;
 }
 
 header {
@@ -28,4 +33,8 @@ header {
 
 .footer {
   background-color: #666666;
+}
+
+.aboutme {
+  margin: 10%;
 }
