--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,38 +3,49 @@ body {
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   background-color: #ffffff;
   border-color: #dddddd;
-  text-align: left;
-  box-align: center;
+  align-content: center;
   width: 960px;
-  margin: 10%;
 }
 
-h1,
-#name {
-  font-family: 'Georgia', 'Times New Roman', Times, serif;
-  color: #4aaaa5;
-  clear: both;
+header {
+  background-color: #ffffff;
+  border-color: #cccccc;
+  padding: 20px 100px 15px 100px;
+  margin: 0px 0px 10px 0px;
 }
 
 a {
+  color: #777777;
   float: right;
+}
+
+h1 {
+  font-family: 'Georgia', 'Times New Roman', Times, serif;
+  color: #4aaaa5;
+}
+
+footer {
+  background-color: #666666;
+  border-color: #4aaaa5;
+  color: #777777;
+  text-align: center;
+  padding: 10px 200px 10px 200px;
+  border-width: 10px 0px 0px 0px;
+}
+
+.section {
+  background-color: #ffffff;
+  border-color: #dddddd;
+  border-width: 1px;
+  text-align: left;
+  box-align: center;
+  margin: 10%;
+  padding: 10px;
 }
 
 #name {
   color: white;
   background-color: #4aaaa5;
   padding: 10px 10px 15px 10px;
-}
-
-header {
-  background-color: #ffffff;
-  border-color: #cccccc;
-}
-
-.footer {
-  background-color: #666666;
-}
-
-.aboutme {
-  margin: 10%;
+  font-family: 'Georgia', 'Times New Roman', Times, serif;
 }
