--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,54 +1,87 @@
 body {
   color: #777777;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-  background-color: #e7b9b9
+  background-color: #e7b9b9;
 }
 
 header {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 50px;
   background-color: #ffffff;
   border-color: #cccccc;
-  padding: 20px 100px;
-  margin: 0px 0px 10px 0px;
+  border-width: 0px 0px 1px 0px;
+  z-index: 2;
+}
+
+#myheader {
+
+}
+
+#name {
+  position: fixed;
+  left: 100px;
+  top: 0px;
+  margin: 0px;
+  font-size: 30px;
+  color: white;
+  background-color: #4aaaa5;
+  padding: 10px 10px 7px 10px;
+  font-family: 'Georgia', 'Times New Roman', Times, serif;
 }
 
 a {
   color: #777777;
   float: right;
+  padding: 10px 10px 10px 0px;
 }
 
 h1 {
+  clear: both;
   font-family: 'Georgia', 'Times New Roman', Times, serif;
   color: #4aaaa5;
 }
 
-footer {
-  background-color: #666666;
-  border-color: #4aaaa5;
-  color: #777777;
-  text-align: center;
-  padding: 10px 200px 10px 200px;
-  border-width: 10px 0px 0px 0px;
-}
-
-.section {
+.aboutme,
+.contact,
+.portfolio {
+  clear: both;
   background-color: #ffffff;
   border-color: #dddddd;
   border-width: 1px;
   box-align: center;
-  margin: 10%;
   padding: 10px;
+  margin: 10%;
+}
+
+.section {
   width: 960px;
-  float: center;
+  z-index: 1;
 }
 
-#name {
-  color: white;
-  background-color: #4aaaa5;
-  padding: 10px 10px 15px 10px;
-  font-family: 'Georgia', 'Times New Roman', Times, serif;
+.cow {
+  padding: 10px;
+  float: left;
 }
 
-#myheader {
+#em,
+#ph,
+#we {
+  font-weight: bolder;
+}
 
-
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 25px;
+  text-align: center;
+  clear: both;
+  background-color: #666666;
+  border-color: #4aaaa5;
+  color: #777777;
+  z-index: 2;
 }
